--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="api_key">dict.1.1.20160723T103526Z.a6023816b945356b.da2a4a3bad61c82cef86d45a6acd69d2b04e6f02</string>
 </resources>
